Update nuget auth variable

--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -41,5 +41,5 @@ jobs:
         dotnet-version: 3.1
         source-url: https://api.nuget.org/v3/index.json
       env:
-        NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}
+        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: dotnet nuget push ./BuildResults/*.nupkg --api-key $NUGET_API_KEY --source "https://api.nuget.org/v3/index.json"
