--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -36,10 +36,10 @@ jobs:
       run: dotnet pack --no-build --configuration Release --output BuildResults
 
     - name: Push
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 3.1
+        dotnet-version: 8.0.x
         source-url: https://api.nuget.org/v3/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-        run: dotnet nuget push ./BuildResults/*.nupkg --api-key $NUGET_API_KEY --source "https://api.nuget.org/v3/index.json"
+        run: dotnet nuget push ./BuildResults/*.nupkg --api-key $NUGET_AUTH_TOKEN --source "https://api.nuget.org/v3/index.json"
