--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -36,6 +36,4 @@ jobs:
       run: dotnet pack --no-build --configuration Release --output BuildResults
 
     - name: Push
-      run: dotnet nuget push ./BuildResults/*.nupkg --api-key "$NUGET_AUTH_TOKEN" --source "https://api.nuget.org/v3/index.json"
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.NUGET_API_KEY}}
+      run: dotnet nuget push ./BuildResults/*.nupkg --api-key ${{secrets.NUGET_API_KEY}} --source "https://api.nuget.org/v3/index.json"
