--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -35,7 +35,10 @@ jobs:
     - name: Pack
       run: dotnet pack --no-build --configuration Release --output BuildResults
 
-    - name: Push
+    - name: Set API Key
       env:
         NUGET_AUTH_TOKEN: ${{secrets.NUGET_API_KEY}}
-      run: dotnet nuget push ./BuildResults/*.nupkg --api-key $NUGET_AUTH_TOKEN --source "https://api.nuget.org/v3/index.json"
+      run: nuget setapikey $NUGET_AUTH_TOKEN -Source "https://api.nuget.org/v3/index.json"
+
+    - name: Push
+      run: dotnet nuget push ./BuildResults/*.nupkg
