Add api key to nuget.config

--- a/src/DaylioData/nuget.config
+++ b/src/DaylioData/nuget.config
@@ -28,5 +28,9 @@
 		<clear />
 		<add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
 	</packageSources>
+
+	<apikeys>
+		<add key="https://api.nuget.org/v3/index.json" value="$NUGET_AUTH_TOKEN" />
+	</apikeys>
 	
 </configuration>
