--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -14,7 +14,7 @@ jobs:
   if_merged:
     if: github.event.pull_request.merged == true
     
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
 
     - uses: actions/checkout@v4
