--- a/src/DaylioData/DaylioData.csproj
+++ b/src/DaylioData/DaylioData.csproj
@@ -14,7 +14,8 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <BaseOutputPath>..\..\BuildResults</BaseOutputPath>
     <UseCommonOutputDirectory>true</UseCommonOutputDirectory>
-    <AssemblyVersion>0.1.0.1</AssemblyVersion>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <Version>0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
