--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -50,3 +50,13 @@ jobs:
       env:
         NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
       run: dotnet nuget push BuildResults\*.nupkg --source "https://api.nuget.org/v3/index.json" --api-key "$env:NUGET_AUTH_TOKEN"
+
+    - name: 'Archive Files'
+      run: tar -cvf BuildResults.tar BuildResults/
+
+    - name: 'Upload Artifacts'
+      uses: actions/upload-artifact@v4
+      with:
+        name: Build-Artifacts
+        path: BuildResults.tar
+        retention-days: 60
